--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2015-04-06  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/mkprof/mkprof.c: Corrected condition when a thread would
+	finish `build' profiles but the last set of its profiles wouldn't
+	pass onto `write'.
+
+	* src/mknoise/: Changed background flux unit to magnitudes, not
+	flux.
+
+	* THANKS: Added institutions which also helped.
+
 2015-04-03  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* lib/fitsarrayvv.c: Changed all occurences of `nul' or `NUL' to
